<resources>
    <string name="app_name">108820027_HW5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Droid Dessert</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donut">Ayame\'s Fire Icon</string>
    <string name="ice_cream">Yo~dayo Nakiri Ayame desu.</string>
    <string name="froyo">poyoyo~ That is cute.</string>

    <string name="donut_order_message">That\'s fire.</string>
    <string name="ice_cream_order_message">Kon-Nakiri~~ Nakiri Ayame desu.</string>
    <string name="froyo_order_message">poyoyo~ yo~yo-yo--yo~~~~~.</string>
    <string name="notice"><![CDATA[<--Created when I follow the course tasks :)]]></string>
</resources>